<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323641"
    tools:context=".bluetoothsample.view.SampleBtActivity">

    <LinearLayout
        android:id="@+id/item_device"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_device"
            android:textColor="#1A1A1A"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textColor="#1A1A1A"
            android:textSize="16sp"
            tools:text="[xx:xx:xx] Evian001" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_status"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="#FFFFFF"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_device">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_status"
            android:textColor="#1A1A1A"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#1A1A1A"
            android:textSize="16sp"
            tools:text="@string/disconnected" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_status">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            app:srcCompat="@drawable/glass_2" />

        <Button
            android:id="@+id/btn_send_cmd"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/shape"
            android:text="开启实验指导模式"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape"
            android:tint="#FFFFFF"
            app:srcCompat="@android:drawable/ic_btn_speak_now"
            tools:srcCompat="@android:drawable/ic_btn_speak_now" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_connect"
        android:layout_width="406dp"
        android:layout_height="72dp"
        android:layout_marginTop="2dp"
        android:background="#FFFFFF"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_search">

        <ImageButton
            android:id="@+id/btn_laststep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape2"
            android:tint="#323641"
            app:srcCompat="@android:drawable/ic_media_previous" />


        <ImageButton
            android:id="@+id/btn_startspeech"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape2"
            android:tint="#323641"
            app:srcCompat="@android:drawable/ic_media_pause" />

        <ImageButton
            android:id="@+id/btn_nextstep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape2"
            android:tint="#323641"
            app:srcCompat="@android:drawable/ic_media_next" />

    </LinearLayout>


    <TextView
        android:id="@+id/search_status"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="#323641"
        android:gravity="center"
        android:text="@string/found_device"
        android:textColor="#ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_connect" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/found_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:background="#323641"
        app:layout_constraintTop_toBottomOf="@+id/search_status"
        tools:layout_editor_absoluteX="0dp" />

    <LinearLayout
        android:id="@+id/item_send_cmd_result"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape3"
        android:gravity="top"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingLeft="10dp"
        android:paddingEnd="8dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/found_device">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="实验步骤"
            android:textColor="#594410"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="163dp">

            <TextView
                android:id="@+id/tv_send_cmd_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:textColor="#594410"
                android:textSize="16sp"
                tools:text="result...." />

        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_notify_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_send_cmd_result">

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>